# hexcalc

./: .gitignore  Cargo.toml  flake.nix
src/: main.rs.bak
src/lib/: errors.rs  expr.rs  intrinsics.rs  mod.rs  state.rs  tests.rs  typing.rs
src/lib/parsing/: mod.rs  word64.rs
src/tui/: main.rs
